<resources>
    <string name="app_name">USCRECSport</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="lyon_button">Lyon Center</string>
    <string name="village_button">Village Gym</string>
    <string name="usc_map">USC Map</string>
    <string name="main_page_activity">main page activity</string>
    <string name="village_gym">Village Gym</string>
    <string name="lyon_gym">Lyon Gym</string>
    <string name="village_gym_scroll_view">village gym scroll view content description</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="ten_am">10:00-10:59</string>
    <string name="eleven_am">11:00-11:59</string>
    <string name="twelve_pm">12:00-12:59</string>
    <string name="one_pm">13:00-13:59</string>
    <string name="two_pm">14:00-14:59</string>
    <string name="three_pm">15:00-15:59</string>
    <string name="four_pm">16:00-16:59</string>
    <string name="five_pm">17:00-17:59</string>
    <string name="six_pm">18:00-18:59</string>
    <string name="seven_pm">19:00-19:59</string>
    <string name="eight_pm">20:00-20:59</string>
    <string name="nine_pm">21:00-21:59</string>
    <string name="current_appointments">Current Appointments</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="summary_page">Summary Page</string>
    <string name="current_appointments_list_scroll_view">hold list of appointment lists</string>
    <string name="past_appointments_list_scroll_view">hold list of appointment lists</string>
    <string name="summary_page_button_content_description">link to summary page</string>
    <string name="notification_list">Notifications!!!!</string>>
</resources>